Corrected a) removing Speaker first to get 4 top parties

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -49,39 +49,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of rows: 7815\n",
+      "Number of rows: 8084\n",
       "Number of columns: 8\n"
      ]
     }
    ],
    "source": [
-    "def clean_hansard(filepath):\n",
-    "    \"\"\"Returns a clean dataframe from the hansard dataset\"\"\"\n",
-    "    df = pd.read_csv(filepath)\n",
-    "    df['party'] = df['party'].replace({'Labour (Co-op)': 'Labour'})\n",
-    "    # print(df['party'].unique())\n",
+    "# Clean the dataset and print its shape\n",
+    "    \n",
+    "df = pd.read_csv(\"p2-texts/hansard40000.csv\")\n",
+    "df['party'] = df['party'].replace({'Labour (Co-op)': 'Labour'})\n",
+    "# print(df['party'].unique())\n",
     "\n",
-    "    party_counts = df['party'].value_counts()\n",
-    "    main_parties = party_counts.nlargest(4).index.tolist()\n",
-    "    df = df[df['party'].isin(main_parties)]\n",
-    "    # print(df['party'].value_counts())\n",
+    "# Remove 'Speaker'\n",
+    "df = df[df['party'] != 'Speaker']\n",
+    "# print(df['party'].value_counts())\n",
     "\n",
-    "    # 4th party 'Speaker'. Remove it.\n",
-    "    df = df[df['party'] != 'Speaker']\n",
-    "    # print(df['party'].value_counts())\n",
+    "party_counts = df['party'].value_counts()\n",
+    "main_parties = party_counts.nlargest(4).index.tolist()\n",
+    "df = df[df['party'].isin(main_parties)]\n",
+    "# print(df['party'].value_counts())\n",
     "\n",
-    "    df = df[df[\"speech_class\"] == \"Speech\"]\n",
-    "    speech_lengths = df[\"speech\"].str.len()\n",
-    "    speeches = speech_lengths >= 1000\n",
-    "    df = df[speeches]\n",
+    "df = df[df[\"speech_class\"] == \"Speech\"]\n",
+    "speech_lengths = df[\"speech\"].str.len()\n",
+    "speeches = speech_lengths >= 1000\n",
+    "df = df[speeches]\n",
     "\n",
-    "    rows, columns = df.shape\n",
-    "    print(f\"Number of rows: {rows}\")\n",
-    "    print(f\"Number of columns: {columns}\")\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "df = clean_hansard(\"p2-texts/hansard40000.csv\")\n"
+    "rows, columns = df.shape\n",
+    "print(f\"Number of rows: {rows}\")\n",
+    "print(f\"Number of columns: {columns}\")\n",
+    "\n"
    ]
   },
   {
