Modified b) including Liberal Democrat party

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
    "id": "90e0f82d",
    "metadata": {},
    "source": [
-    "The dataset is imbalanced (Conservative: 0.616603, Labour: 0.296545, Scottish National Party: 0.086852)"
+    "The dataset is imbalanced (Conservative: 0.596103, Labour: 0.286686, Scottish National Party: 0.083965, Liberal Democrat 0.033246)"
    ]
   },
   {
