Modified c) f1 score and classification reports including Liberal Democrat

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -112,39 +112,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.6269718149483269\n",
+      "f1 score: 0.45422557608349956\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.74      0.98      0.84       964\n",
-      "                 Labour       0.79      0.43      0.56       463\n",
-      "Scottish National Party       0.96      0.32      0.48       136\n",
+      "           Conservative       0.72      0.98      0.83       964\n",
+      "                 Labour       0.75      0.44      0.55       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.89      0.29      0.43       136\n",
       "\n",
-      "               accuracy                           0.76      1563\n",
-      "              macro avg       0.83      0.58      0.63      1563\n",
-      "           weighted avg       0.78      0.76      0.73      1563\n",
+      "               accuracy                           0.73      1617\n",
+      "              macro avg       0.59      0.43      0.45      1617\n",
+      "           weighted avg       0.72      0.73      0.69      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.7871964473639963\n",
+      "f1 score: 0.5933446121140653\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.85      0.92      0.89       964\n",
-      "                 Labour       0.79      0.71      0.75       463\n",
-      "Scottish National Party       0.83      0.65      0.73       136\n",
+      "           Conservative       0.83      0.92      0.87       964\n",
+      "                 Labour       0.74      0.71      0.72       463\n",
+      "       Liberal Democrat       1.00      0.07      0.14        54\n",
+      "Scottish National Party       0.78      0.54      0.64       136\n",
       "\n",
-      "               accuracy                           0.83      1563\n",
-      "              macro avg       0.83      0.76      0.79      1563\n",
-      "           weighted avg       0.83      0.83      0.83      1563\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.84      0.56      0.59      1617\n",
+      "           weighted avg       0.81      0.80      0.79      1617\n",
       "\n"
      ]
     }
