Modified d) adding bigrams and trigrams with 4th party

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -112,22 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -172,8 +160,9 @@
     "    random_forest.fit(features_train, labels_train)\n",
     "    rf_predict = random_forest.predict(features_test)\n",
     "\n",
+    "    # Added zero_division to handle 0.0 precision warning \n",
     "    random_forest_f1 = f1_score(labels_test, rf_predict, average=\"macro\")\n",
-    "    random_forest_report = classification_report(labels_test, rf_predict)\n",
+    "    random_forest_report = classification_report(labels_test, rf_predict, zero_division=0)\n",
     "\n",
     "    svm = SVC(kernel=\"linear\", random_state=26)\n",
     "    svm.fit(features_train, labels_train)\n",
@@ -189,8 +178,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e7b6256",
+   "metadata": {},
+   "source": [
+    "Liberal Democrat is not being predicted with the Random Forest classifier. Getting a warning message solved with zero_division.\n",
+    "\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.45422557608349956\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.5933446121140653"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 69,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -199,30 +201,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.6748975043716996\n",
+      "f1 score: 0.47930475175651455\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.76      0.97      0.85       964\n",
-      "                 Labour       0.80      0.49      0.61       463\n",
-      "Scottish National Party       0.95      0.40      0.57       136\n",
+      "           Conservative       0.74      0.96      0.83       964\n",
+      "                 Labour       0.75      0.48      0.58       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.84      0.35      0.50       136\n",
       "\n",
-      "               accuracy                           0.78      1563\n",
-      "              macro avg       0.84      0.62      0.67      1563\n",
-      "           weighted avg       0.79      0.78      0.75      1563\n",
+      "               accuracy                           0.74      1617\n",
+      "              macro avg       0.58      0.45      0.48      1617\n",
+      "           weighted avg       0.72      0.74      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.7955796360349998\n",
+      "f1 score: 0.5854220473255666\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.86      0.92      0.89       964\n",
-      "                 Labour       0.79      0.73      0.76       463\n",
-      "Scottish National Party       0.84      0.65      0.74       136\n",
+      "           Conservative       0.84      0.92      0.88       964\n",
+      "                 Labour       0.75      0.73      0.74       463\n",
+      "       Liberal Democrat       1.00      0.04      0.07        54\n",
+      "Scottish National Party       0.78      0.56      0.65       136\n",
       "\n",
-      "               accuracy                           0.84      1563\n",
-      "              macro avg       0.83      0.77      0.80      1563\n",
-      "           weighted avg       0.84      0.84      0.84      1563\n",
+      "               accuracy                           0.81      1617\n",
+      "              macro avg       0.84      0.56      0.59      1617\n",
+      "           weighted avg       0.81      0.81      0.79      1617\n",
       "\n"
      ]
     }
@@ -246,12 +250,16 @@
    "id": "93c6e74b",
    "metadata": {},
    "source": [
-    "Adding bigrams and trigrams improved performance as F1 and accuracy slightly increased."
+    "Random Forest classifier\n",
+    "f1 score: 0.47930475175651455\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.5854220473255666\n",
+    "Adding bigrams and trigrams improved F1 score for RF, not accuracy. Wrost F1 score for SVM."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -275,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "id": "43a23e0b",
    "metadata": {},
    "outputs": [
@@ -292,30 +300,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.6890668398952485\n",
+      "f1 score: 0.48488995613968\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.76      0.96      0.85       964\n",
-      "                 Labour       0.80      0.47      0.60       463\n",
-      "Scottish National Party       0.91      0.47      0.62       136\n",
+      "           Conservative       0.74      0.96      0.84       964\n",
+      "                 Labour       0.76      0.50      0.60       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.79      0.37      0.50       136\n",
       "\n",
-      "               accuracy                           0.78      1563\n",
-      "              macro avg       0.83      0.64      0.69      1563\n",
-      "           weighted avg       0.79      0.78      0.76      1563\n",
+      "               accuracy                           0.75      1617\n",
+      "              macro avg       0.57      0.46      0.48      1617\n",
+      "           weighted avg       0.73      0.75      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.7909362022889694\n",
+      "f1 score: 0.58073183701322\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.86      0.92      0.89       964\n",
-      "                 Labour       0.78      0.72      0.75       463\n",
-      "Scottish National Party       0.84      0.65      0.74       136\n",
+      "           Conservative       0.84      0.91      0.87       964\n",
+      "                 Labour       0.73      0.73      0.73       463\n",
+      "       Liberal Democrat       1.00      0.04      0.07        54\n",
+      "Scottish National Party       0.79      0.55      0.65       136\n",
       "\n",
-      "               accuracy                           0.84      1563\n",
-      "              macro avg       0.83      0.76      0.79      1563\n",
-      "           weighted avg       0.83      0.84      0.83      1563\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.84      0.56      0.58      1617\n",
+      "           weighted avg       0.81      0.80      0.79      1617\n",
       "\n"
      ]
     }
@@ -342,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "45515b41",
    "metadata": {},
    "outputs": [],
@@ -350,7 +360,7 @@
     "# Try with up to bigrams (2 word) sequence.\n",
     "\n",
     "vectorizer = TfidfVectorizer(tokenizer=custom_tokenizer_nltk, stop_words='english', max_features=3000,\n",
-    "    ngram_range=(1,1,))\n",
+    "    ngram_range=(1,2))\n",
     "\n",
     "# features = vectorizer.fit_transform(df['speech'])\n",
     "# labels = df['party']\n",
@@ -370,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "id": "1c1b460e",
    "metadata": {},
    "outputs": [
@@ -387,30 +397,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.6778256216611293\n",
+      "f1 score: 0.4873063571144849\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.76      0.96      0.85       964\n",
-      "                 Labour       0.79      0.48      0.59       463\n",
-      "Scottish National Party       0.91      0.44      0.59       136\n",
+      "           Conservative       0.74      0.96      0.84       964\n",
+      "                 Labour       0.76      0.50      0.60       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.83      0.37      0.51       136\n",
       "\n",
-      "               accuracy                           0.77      1563\n",
-      "              macro avg       0.82      0.62      0.68      1563\n",
-      "           weighted avg       0.78      0.77      0.75      1563\n",
+      "               accuracy                           0.75      1617\n",
+      "              macro avg       0.58      0.46      0.49      1617\n",
+      "           weighted avg       0.73      0.75      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.7940558943755874\n",
+      "f1 score: 0.5794649410566366\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.86      0.91      0.89       964\n",
-      "                 Labour       0.78      0.73      0.75       463\n",
-      "Scottish National Party       0.86      0.65      0.74       136\n",
+      "           Conservative       0.83      0.91      0.87       964\n",
+      "                 Labour       0.73      0.72      0.73       463\n",
+      "       Liberal Democrat       1.00      0.04      0.07        54\n",
+      "Scottish National Party       0.79      0.55      0.65       136\n",
       "\n",
-      "               accuracy                           0.84      1563\n",
-      "              macro avg       0.83      0.77      0.79      1563\n",
-      "           weighted avg       0.84      0.84      0.83      1563\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.84      0.56      0.58      1617\n",
+      "           weighted avg       0.80      0.80      0.78      1617\n",
       "\n"
      ]
     }
