--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,13 +35,15 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import f1_score, classification_report\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
     "\n",
-    "nltk.download('punkt') \n"
+    "nltk.download('punkt') \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -268,12 +270,15 @@
     "Try to achieve the best classification performance with same number of features (3000) and the same three classifiers. \n",
     "Print the classification report for the best performing classifier using your tokenizer.\"\"\"\n",
     "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
     "def custom_tokenizer_nltk(text):\n",
     "    tokens = word_tokenize(text)\n",
-    "    # Keep only alphabetical words (remove numbers and punctuation).\n",
     "    clean_tokens = []\n",
     "    for token in tokens:\n",
-    "        if token.isalpha():\n",
+    "        if (token.isalpha() and\n",
+    "            token.lower() not in stop_words and\n",
+    "            len(token) > 2):\n",
     "            clean_tokens.append(token.lower())\n",
     "    return clean_tokens\n",
     "        \n",
@@ -283,7 +288,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
+   "id": "a1872341",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63     [less, two, weeks, since, government, launched...\n",
+      "99     [delighted, announce, last, friday, reached, a...\n",
+      "100    [thank, secretary, state, advance, sight, stat...\n",
+      "101    [right, hon, lady, congratulations, securing, ...\n",
+      "104    [congratulate, secretary, state, recognise, al...\n",
+      "Name: speech, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "texts = df['speech']\n",
+    "\n",
+    "tokenized_texts = texts.apply(custom_tokenizer_nltk)\n",
+    "\n",
+    "print(tokenized_texts.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "43a23e0b",
    "metadata": {},
    "outputs": [
@@ -300,32 +332,32 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.48488995613968\n",
+      "f1 score: 0.49894852665494777\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.74      0.96      0.84       964\n",
-      "                 Labour       0.76      0.50      0.60       463\n",
+      "           Conservative       0.74      0.97      0.84       964\n",
+      "                 Labour       0.77      0.50      0.60       463\n",
       "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       0.79      0.37      0.50       136\n",
+      "Scottish National Party       0.90      0.40      0.55       136\n",
       "\n",
       "               accuracy                           0.75      1617\n",
-      "              macro avg       0.57      0.46      0.48      1617\n",
-      "           weighted avg       0.73      0.75      0.71      1617\n",
+      "              macro avg       0.60      0.47      0.50      1617\n",
+      "           weighted avg       0.74      0.75      0.72      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.58073183701322\n",
+      "f1 score: 0.5720440957867078\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.84      0.91      0.87       964\n",
-      "                 Labour       0.73      0.73      0.73       463\n",
+      "           Conservative       0.83      0.92      0.87       964\n",
+      "                 Labour       0.72      0.72      0.72       463\n",
       "       Liberal Democrat       1.00      0.04      0.07        54\n",
-      "Scottish National Party       0.79      0.55      0.65       136\n",
+      "Scottish National Party       0.77      0.52      0.62       136\n",
       "\n",
       "               accuracy                           0.80      1617\n",
-      "              macro avg       0.84      0.56      0.58      1617\n",
-      "           weighted avg       0.81      0.80      0.79      1617\n",
+      "              macro avg       0.83      0.55      0.57      1617\n",
+      "           weighted avg       0.80      0.80      0.78      1617\n",
       "\n"
      ]
     }
@@ -347,7 +379,11 @@
    "id": "9537bb36",
    "metadata": {},
    "source": [
-    "The NLTK custom_tokenizer shows slighlty improvement in the Random Forest classifier but not in SVM."
+    "The NLTK custom_tokenizer shows slighlty improvement in the Random Forest classifier but not in SVM.\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.49894852665494777\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.5720440957867078"
    ]
   },
   {
