Implemented spaCy tokenizer

--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "11ad6c29",
    "metadata": {},
    "outputs": [
@@ -13,23 +13,15 @@
       "[nltk_data] Downloading package punkt to /Users/jimena/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import nltk\n",
+    "import spacy\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
@@ -37,13 +29,14 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "nltk.download('punkt') \n",
+    "nltk.download('punkt')\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "531f9ad5",
    "metadata": {},
    "outputs": [
@@ -85,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "a33040f6",
    "metadata": {},
    "outputs": [],
@@ -114,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "9f63a418",
    "metadata": {},
    "outputs": [
@@ -194,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "0082716d",
    "metadata": {},
    "outputs": [
@@ -261,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "188a7768",
    "metadata": {},
    "outputs": [],
@@ -288,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "a1872341",
    "metadata": {},
    "outputs": [
@@ -315,7 +308,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "17e10f7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def custom_tokenizer_spacy(text):\n",
+    "    doc = nlp(text)\n",
+    "    clean_tokens = []\n",
+    "    for token in doc:\n",
+    "        if (token.is_alpha and \n",
+    "            not token.is_stop and     \n",
+    "            len(token.lemma_) > 2): \n",
+    "            clean_tokens.append(token.lemma_.lower())\n",
+    "    return clean_tokens\n",
+    "\n",
+    "# text = \"Hello, world! This is a test\"\n",
+    "# print(custom_tokenizer_spacy(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a8ea34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.3177120531855518\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.66      1.00      0.80       964\n",
+      "                 Labour       0.82      0.28      0.42       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       1.00      0.03      0.06       136\n",
+      "\n",
+      "               accuracy                           0.68      1617\n",
+      "              macro avg       0.62      0.33      0.32      1617\n",
+      "           weighted avg       0.71      0.68      0.60      1617\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.5628320204715067\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.82      0.94      0.88       964\n",
+      "                 Labour       0.75      0.70      0.72       463\n",
+      "       Liberal Democrat       1.00      0.02      0.04        54\n",
+      "Scottish National Party       0.83      0.49      0.62       136\n",
+      "\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.85      0.54      0.56      1617\n",
+      "           weighted avg       0.81      0.80      0.78      1617\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False)\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
+    "labels = df['party']\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11e59bd2",
+   "metadata": {},
+   "source": [
+    "Lower performance and less efficient using spaCy.\n",
+    "Random Forest classifier\n",
+    "f1 score: 0.3177120531855518\n",
+    "SVM linear classifier\n",
+    "f1 score: 0.5628320204715067"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "43a23e0b",
    "metadata": {},
    "outputs": [
@@ -388,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "45515b41",
    "metadata": {},
    "outputs": [],
@@ -416,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "id": "1c1b460e",
    "metadata": {},
    "outputs": [
@@ -433,31 +518,31 @@
      "output_type": "stream",
      "text": [
       "Random Forest classifier\n",
-      "f1 score: 0.4873063571144849\n",
+      "f1 score: 0.4818605591717103\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
       "           Conservative       0.74      0.96      0.84       964\n",
-      "                 Labour       0.76      0.50      0.60       463\n",
+      "                 Labour       0.75      0.48      0.58       463\n",
       "       Liberal Democrat       0.00      0.00      0.00        54\n",
-      "Scottish National Party       0.83      0.37      0.51       136\n",
+      "Scottish National Party       0.80      0.38      0.51       136\n",
       "\n",
-      "               accuracy                           0.75      1617\n",
-      "              macro avg       0.58      0.46      0.49      1617\n",
-      "           weighted avg       0.73      0.75      0.71      1617\n",
+      "               accuracy                           0.74      1617\n",
+      "              macro avg       0.57      0.45      0.48      1617\n",
+      "           weighted avg       0.72      0.74      0.71      1617\n",
       "\n",
       "SVM linear classifier\n",
-      "f1 score: 0.5794649410566366\n",
+      "f1 score: 0.571589034626724\n",
       "Classification report:\n",
       "                         precision    recall  f1-score   support\n",
       "\n",
-      "           Conservative       0.83      0.91      0.87       964\n",
-      "                 Labour       0.73      0.72      0.73       463\n",
+      "           Conservative       0.83      0.92      0.87       964\n",
+      "                 Labour       0.72      0.71      0.72       463\n",
       "       Liberal Democrat       1.00      0.04      0.07        54\n",
-      "Scottish National Party       0.79      0.55      0.65       136\n",
+      "Scottish National Party       0.77      0.52      0.62       136\n",
       "\n",
       "               accuracy                           0.80      1617\n",
-      "              macro avg       0.84      0.56      0.58      1617\n",
+      "              macro avg       0.83      0.55      0.57      1617\n",
       "           weighted avg       0.80      0.80      0.78      1617\n",
       "\n"
      ]
