--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "17e10f7f",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
     "    for token in doc:\n",
     "        if (token.is_alpha and \n",
     "            not token.is_stop and     \n",
-    "            len(token.lemma_) > 2): \n",
+    "            len(token.lemma_) > 1): \n",
     "            clean_tokens.append(token.lemma_.lower())\n",
     "    return clean_tokens\n",
     "\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "5a8ea34a",
    "metadata": {},
    "outputs": [
@@ -396,6 +396,73 @@
     "f1 score: 0.3177120531855518\n",
     "SVM linear classifier\n",
     "f1 score: 0.5628320204715067"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "6c8a749a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jimena/.pyenv/versions/3.12.3/lib/python3.12/site-packages/sklearn/feature_extraction/text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest classifier\n",
+      "f1 score: 0.3059044976607264\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.66      0.99      0.79       964\n",
+      "                 Labour       0.80      0.27      0.40       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       1.00      0.01      0.03       136\n",
+      "\n",
+      "               accuracy                           0.67      1617\n",
+      "              macro avg       0.61      0.32      0.31      1617\n",
+      "           weighted avg       0.70      0.67      0.59      1617\n",
+      "\n",
+      "SVM linear classifier\n",
+      "f1 score: 0.6724297664903492\n",
+      "Classification report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.85      0.90      0.88       964\n",
+      "                 Labour       0.73      0.71      0.72       463\n",
+      "       Liberal Democrat       0.64      0.33      0.44        54\n",
+      "Scottish National Party       0.71      0.60      0.65       136\n",
+      "\n",
+      "               accuracy                           0.80      1617\n",
+      "              macro avg       0.73      0.64      0.67      1617\n",
+      "           weighted avg       0.80      0.80      0.80      1617\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = CountVectorizer(tokenizer=lambda x: x.split(), preprocessor=None, lowercase=False)\n",
+    "features = vectorizer.fit_transform(df['speech'])\n",
+    "labels = df['party']\n",
+    "\n",
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size= 0.2, random_state= 26, stratify= labels)\n",
+    "\n",
+    "random_forest_and_linearsvm_performance(features_train, features_test, labels_train, labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7677239a",
+   "metadata": {},
+   "source": [
+    "SVM improved performance with CountVectorizer. f1 score: 0.6724297664903492. Lower for RF."
    ]
   },
   {
